Project "Second telegram bot". version 0.8.1 (global refactoring, delete spring framework)